issue98: Improved folding code whch allows for hiding all fold lines so they don't even show up, thereby approximating the standard console output. Some spacing issues still need ironing out. Fixed erroneous bracket (['']) issue in output. Found the issue where the 'sticky' behavior of the top bar is getting brken, but fixing that causes individual test case results to no longer be expandable. Other issues for fixing/improvement: make foldable output appear in individual test case details. Provide buttons for all levels of log output (does this make sense?). Allow custom levels.

--- a/pytest_tui/resources/styles.css
+++ b/pytest_tui/resources/styles.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
+
+/* No break (newline) */
+.nobr { white-space: nowrap }
+
 /* Dropdown Button */
- .dropbtn {
+.dropbtn {
      background-color: #04AA6D;
      color: white;
      padding: 16px;
@@ -42,7 +46,12 @@
  .dropdown:hover .dropdown-content {
     display: block;
 }
- div.sticky {
+
+btn-rt {
+    text-align: right
+}
+
+div.sticky {
      position: -webkit-sticky;
      position: sticky;
      top: 0;
@@ -79,7 +88,7 @@
 }
  .tab button:hover {
      background-color: #ddd;
-     opacity: 0.65;
+     opacity: 1.0;
      transition: 0.3s;
 }
  .tab button.focus {
@@ -93,7 +102,7 @@
 }
  .tablinks {
      font-family: "Arial", sans-serif;
-     font-size: 15px opacity: 0.4;
+     font-size: 15px opacity: 1.0;
 }
  .tabcontent {
      background-color: #ddd;
